syntax = "proto3";
package stegos.account_log;

import "crypto.proto";
import "blockchain.proto";

message PaymentValue {
    stegos.blockchain.PaymentOutput output = 1;
    int64 amount = 2;
    stegos.blockchain.PaymentPayloadData payload = 3;
}

// Possible outputs
// (Copy of stegos.blockchain.Output, but without stake,
// and with additional info about PaymentPayload of PaymentOutput)
message OutputValue {
    oneof enum_value {
        PaymentValue payment = 1;
        stegos.blockchain.PublicPaymentOutput public_payment = 2;
    }
}

// Certificate of creation for utxo.
message ExtendedOutputValue {
    /// destination PublicKey.
    stegos.crypto.PublicKey recipient = 1;
    int64 amount = 2;
    stegos.crypto.Fr rvalue = 3;
    stegos.blockchain.PaymentPayloadData data = 4;
    bool is_change = 5;
}

// Information about created transactions
message PaymentTransactionValue {
    stegos.blockchain.PaymentTransaction tx = 1;
    TransactionStatus status = 2;
    repeated ExtendedOutputValue outputs = 3;
}

// Incoming event
message Incoming {
    OutputValue output = 1;
    bool is_change = 2;
}

// Outgoing event
message Outgoing {
    PaymentTransactionValue value = 1;
}

// Log entry
message LogEntry {
    oneof enum_value {
        Incoming incoming = 1;
        Outgoing outgoing = 2;
        SnowballRequest snowball = 3;
    }
}

message SnowballRequest {
    repeated stegos.crypto.Hash inputs = 1;
    stegos.crypto.Hash session_id = 2;
    stegos.crypto.PublicKey recipient = 3;
    int64 amount = 4;
    stegos.crypto.Hash finished = 5;
}


message EpochWithOffset {
    uint64 epoch = 1;
    uint32 offset = 2;
}

message TransactionStatus {
    oneof enum_value {
        bytes created = 1;
        bytes accepted = 2;
        string rejected = 3;
        EpochWithOffset prepare = 4;
        EpochWithOffset rollback = 5;
        EpochWithOffset committed = 6;
        EpochWithOffset conflicted = 7;
    }
}
